# holodex-rs

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml
src/: client.rs  errors.rs  lib.rs  model.rs  util.rs
src/model/: builders.rs  id.rs  serializers.rs
