[package]
name = "holodex"
version = "0.3.1"
edition = "2021"
description = "A Rust wrapper of the Holodex v2 API."
repository = "https://github.com/anden3/holodex-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hololive", "livestream", "api"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.tokio-test]
version = "0.4.2"

[dev-dependencies.futures]
version = "0.3.28"
default-features = false

[dependencies.async-stream]
version = "0.3.5"
optional = true

[dependencies.chrono]
version = "0.4.26"
default_features = false
features = ["std", "serde"]

[dependencies.futures-core]
version = "0.3.29"
optional = true

[dependencies.quick-error]
version = "2.0.1"

[dependencies.regex]
version = "1.9.1"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.191"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.108"

[dependencies.serde_with]
version = "1.10.0"
default-features = false
features = ["chrono"]

[dependencies.serde_urlencoded]
version = "0.7.1"

[dependencies.smartstring]
version = "1.0.1"
features = ["serde"]
optional = true

[dependencies.ureq]
version = "2.7.1"
features = ["json"]


[features]
default = ["streams", "sso"]
streams = ["async-stream", "futures-core"]
sso = ["smartstring"]
