[package]
name = "holodex"
version = "0.3.3"
edition = "2021"
description = "A Rust wrapper of the Holodex v2 API."
repository = "https://github.com/anden3/holodex-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hololive", "livestream", "api"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.tokio-test]
version = "0.4.3"

[dev-dependencies.futures]
version = "0.3.30"
default-features = false

[dependencies.async-stream]
version = "0.3.5"
optional = true

[dependencies.chrono]
version = "0.4.31"
default_features = false
features = ["std", "serde"]

[dependencies.futures-core]
version = "0.3.30"
optional = true

[dependencies.quick-error]
version = "2.0.1"

[dependencies.regex]
version = "1.10.2"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.195"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.111"

[dependencies.serde_with]
version = "3.4.0"
default-features = false
features = ["chrono_0_4"]

[dependencies.serde_urlencoded]
version = "0.7.1"

[dependencies.smartstring]
version = "1.0.1"
features = ["serde"]
optional = true

[dependencies.ureq]
version = "3.0.1"
features = ["json"]


[features]
default = ["streams", "sso"]
streams = ["async-stream", "futures-core"]
sso = ["smartstring"]
