[package]
name = "holodex"
version = "0.3.3"
edition = "2024"
description = "A Rust wrapper of the Holodex v2 API."
repository = "https://github.com/anden3/holodex-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hololive", "livestream", "api"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.tokio-test]
version = "0.4.5"

[dev-dependencies.futures]
version = "0.3.32"
default-features = false

[dependencies.async-stream]
version = "0.3.6"
optional = true

[dependencies.chrono]
version = "0.4.44"
default-features = false
features = ["std", "serde"]

[dependencies.futures-core]
version = "0.3.32"
optional = true

[dependencies.quick-error]
version = "2.0.1"

[dependencies.regex]
version = "1.12.3"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"

[dependencies.serde_with]
version = "3.20.0"
default-features = false
features = ["chrono_0_4"]

[dependencies.serde_urlencoded]
version = "0.7.1"

[dependencies.smartstring]
version = "1.0.1"
features = ["serde"]
optional = true

[dependencies.ureq]
version = "3.3.0"
features = ["json"]


[features]
default = ["streams", "sso"]
streams = ["async-stream", "futures-core"]
sso = ["smartstring"]
